--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -20,6 +20,7 @@
     "enableHibernateCache": false,
     "enableSwaggerCodegen": false,
     "enableTranslation": true,
+    "entities": [],
     "entitySuffix": "",
     "gradleEnterpriseHost": "",
     "jhiPrefix": "jhi",
@@ -32,7 +33,7 @@
     "packageFolder": "com/mycompany/myapp",
     "packageName": "com.mycompany.myapp",
     "pages": [],
-    "prodDatabaseType": "postgresql",
+    "prodDatabaseType": "mysql",
     "reactive": true,
     "searchEngine": false,
     "serverPort": "8081",
